adapt ArbreMot to work on java 17